[package]
name = "network_speed"
version = "0.1.0"
authors = ["Tice Cosmos <tice@139.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
log = "0.4"
rand = {version = "0.7", features = ["small_rng"]}
structopt = "0.3"
